kubernetes/infrastructure/network/envoy-gateway/gateway/private/gateway.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: &ip 192.168.178.210
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: private-proxy-config
  addresses:
    - type: IPAddress
      value: *ip
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.costanza.cloud"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.costanza.cloud"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: costanza-cloud-tls
